--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,83 @@
 body {
+  background: #ff6150;
+  font-family: sans-serif;
+}
+
+h1 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #4a4c4c;
+}
+
+h2 {
+  color: #4a4c4c;
+  margin: 0;
+  font-size: 28px;
+}
+
+select {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  color: #686a6b;
+  border-color: #ff6150;
+  font-size: 15px;
+}
+
+.container {
+  background-color: white;
+  max-width: 600px;
+  margin: 60px auto;
+  margin-bottom: 10px;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  width: 40px;
+  margin-top: 8px;
+  margin-bottom: 5px;
+}
+
+.city {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  border-bottom: 1px dashed #c2c4c5;
+}
+
+.city:last-child {
+  border: none;
+}
+
+.time {
+  font-size: 46px;
+  color: #4a4c4c;
+}
+
+.time small {
+  font-size: 23px;
+  vertical-align: middle;
+}
+
+.date {
+  font-size: 13px;
+  opacity: 0.7;
+}
+
+footer {
   text-align: center;
-  
+  font-size: 14px;
+  color: white;
+}
+
+footer a {
+  color: #1e7b7e;
 }
