--- a/src/style.css
+++ b/src/style.css
@@ -28,9 +28,11 @@ select {
   background-color: white;
   max-width: 600px;
   margin: 60px auto;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   padding: 20px;
   border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
 .header {
